group 'pl.pgrudev'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'application'
apply plugin: 'idea'
apply plugin: 'org.springframework.boot'
mainClassName = "pl.pgrudev.Main"

sourceCompatibility = 1.8

repositories {
    mavenCentral()
    maven {
        url 'https://repo.spring.io/libs-release'
    }
}

buildscript {
    repositories {
        mavenCentral()
    }
    dependencies {
        classpath("org.springframework.boot:spring-boot-gradle-plugin:1.5.8.RELEASE")
    }
}
dependencies {
    testCompile group: 'junit', name: 'junit', version: '4.12'
    compile "io.netty:netty-all:$nettyVersion"

    compile "com.typesafe.akka:akka-actor_2.11:$akkaVersion"

    compile "org.apache.logging.log4j:log4j-api:$log4j2Version"
    compile "org.apache.logging.log4j:log4j-core:$log4j2Version"

    compile "javax.inject:javax.inject:1"

    compile "com.google.code.gson:gson:2.8.2"

    //compile 'org.springframework.data:spring-data-mongodb:1.10.8.RELEASE'
    compile "org.springframework.boot:spring-boot-starter-data-mongodb"
   // compile "org.springframework:spring-beans:$springVersion"
   // compile "org.springframework:spring-core:$springVersion"
   // compile "org.springframework:spring-context:$springVersion"
   // compile "org.springframework:spring-context-support:$springVersion"

}
